[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/audioOn.png" type="Texture" id=1]
[ext_resource path="res://ui/PlayerGold.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/audioOff.png" type="Texture" id=3]
[ext_resource path="res://sprites/musicOn.png" type="Texture" id=4]
[ext_resource path="res://scripts/controllers/SoundController.gd" type="Script" id=5]
[ext_resource path="res://sprites/musicOff.png" type="Texture" id=6]

[node name="GoldAndSoundContainer" type="HBoxContainer"]
margin_left = 20.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 20
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
music_disabled_texture = ExtResource( 6 )
music_enabled_texture = ExtResource( 4 )
sfx_disabled_texture = ExtResource( 3 )
sfx_enabled_texture = ExtResource( 1 )

[node name="PlayerGold" parent="." instance=ExtResource( 2 )]
margin_right = 68.0
margin_bottom = 50.0

[node name="ToggleSFX" type="TextureRect" parent="."]
margin_left = 88.0
margin_right = 138.0
margin_bottom = 50.0
texture = ExtResource( 1 )

[node name="ToggleMusic" type="TextureRect" parent="."]
margin_left = 158.0
margin_right = 208.0
margin_bottom = 50.0
texture = ExtResource( 4 )
[connection signal="gui_input" from="ToggleSFX" to="." method="_on_ToggleSFX_gui_input"]
[connection signal="gui_input" from="ToggleMusic" to="." method="_on_ToggleMusic_gui_input"]
